# parallel-fem-poisson-solver

./: .clang-format  .gitignore  ActionsInstall.sh  CMakeLists.txt  README.md  cuda-scorec-config.sh  openmp-scorec-config.sh  scorec-config.sh
.github/workflows/: RunTests.yml
SpeedupAnalysis/: note.txt  plotCAS2.ipynb  total_time.ipynb
SpeedupAnalysis/cases/omp_cases/: omp.err
src/: CMakeLists.txt  CalculateStiffnessMatrixAndLoadVector.cpp  CalculateStiffnessMatrixAndLoadVector.hpp  Element.hpp  MatVecMult.cpp  MatVecMult.h  Mesh.cpp  Mesh.h  QuadElement.hpp  StiffnessMatrix.cpp  StiffnessMatrix.h  TriElement.hpp  main.cpp
tests/: .gdb_history  CMakeLists.txt  test_assembly.cpp  test_element_stiffness.cpp  test_load_vector_assembly.cpp  test_matvec_mult.cpp  unit_tests.cpp
tests/assets/: TriMesh0.01.msh  small_square.msh
